--- a/01-gallery.html
+++ b/01-gallery.html
@@ -7,7 +7,7 @@
     <title>Image gallery</title>
     <link rel="stylesheet" href="css/common.css" />
     <link rel="stylesheet" href="css/styles.css" />
-
+    <link rel="stylesheet" href="../dist/basicLightbox.min.css">
   </head>
   <body>
     <p><a href="index.html">Go back</a></p>
