--- a/01-gallery.html
+++ b/01-gallery.html
@@ -14,8 +14,8 @@
 
     <!-- Add gallery items to this list -->
     <div class="gallery"></div>
-    <script src="https://cdn.jsdelivr.net/npm/basiclightbox@5.0.4/dist/basicLightbox.min.js"></script>
+    <script src="../dist/basicLightbox.min.js"></script>
     <script src="js/01-gallery.js" type="module"></script>
-    <script src="https://cdn.jsdelivr.net/npm/basiclightbox@5.0.4/dist/basicLightbox.min.js"></script>
+    
   </body>
 </html>
