--- a/01-gallery.html
+++ b/01-gallery.html
@@ -14,8 +14,8 @@
 
     <!-- Add gallery items to this list -->
     <div class="gallery"></div>
-    <script src="./dist/basicLightbox.min.js"></script>
-    <script src="js/01-gallery.js"></script>
+    <script src="./dist/basicLightbox.min.js" type="module"></script>
+    <script src="js/01-gallery.js" type="module"></script>
     
   </body>
 </html>
